@@ -18,91 +18,105 @@ function getAgent() {
         mkdir -p "${BASE_DIR}/pinpoint"
         cd "${BASE_DIR}/pinpoint"
         curl -o pinpoint.tar.gz \
-           https://repo1.maven.org/maven2/com/navercorp/pinpoint/pinpoint-agent/3.0.1/pinpoint-agent-3.0.1.tar.gz
+           https://repo1.maven.org/maven2/com/navercorp/pinpoint/pinpoint-agent/$PINPOINT_VERSION/pinpoint-agent-"$PINPOINT_VERSION".tar.gz
         tar -xf pinpoint.tar.gz
         cd $BASE_DIR
     fi
 }
 
-export HBASE_VERSION=2.6.1
+function startHBaseAndKafkaContainers {
+	docker run -d \
+		--name hbase \
+		--hostname hbase \
+		--net=host \
+		--entrypoint /bin/sh \
+		openeuler/hbase:2.6.3-oe2403sp1 \
+		-c "
+# hostname-Befehl ad-hoc definieren
+hostname() { cat /etc/hostname; }
+export -f hostname
+
+# embedded ZK auf 0.0.0.0 setzen
+sed -i '/<configuration>/a <property><name>hbase.zookeeper.property.clientPortAddress</name><value>0.0.0.0</value></property>' /usr/local/hbase/conf/hbase-site.xml
+
+sed -i '/<configuration>/a <property><name>hbase.master.hostname</name><value>localhost</value></property>' /usr/local/hbase/conf/hbase-site.xml
+sed -i '/<configuration>/a <property><name>hbase.master.port</name><value>16000</value></property>' /usr/local/hbase/conf/hbase-site.xml
+
+
+# HBase starten und Logs anhängen
+/usr/local/hbase/bin/start-hbase.sh && tail -F /usr/local/hbase/logs/*
+"
+	docker run -d \
+		--name kafka \
+		--net=host \
+		-e KAFKA_NODE_ID=1 \
+		-e KAFKA_PROCESS_ROLES=broker,controller \
+		-e KAFKA_LISTENERS=PLAINTEXT://:9092,CONTROLLER://:9093 \
+		-e KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://localhost:9092 \
+		-e KAFKA_CONTROLLER_LISTENER_NAMES=CONTROLLER \
+		-e KAFKA_INTER_BROKER_LISTENER_NAME=PLAINTEXT \
+		-e KAFKA_CONTROLLER_QUORUM_VOTERS=1@localhost:9093 \
+		-e CLUSTER_ID=abcdefghijklmnopqrstuv \
+		confluentinc/cp-kafka:7.6.0
+}
 
 function startHBase() {
-   echo "Starting HBase $HBASE_VERSION"
-   if [ ! -d $BASE_DIR/hbase-$HBASE_VERSION ]
-   then
-      HBASE_URL=https://dlcdn.apache.org/hbase/$HBASE_VERSION/hbase-$HBASE_VERSION-bin.tar.gz
-      HBASE_URL_SHA512=https://dlcdn.apache.org/hbase/$HBASE_VERSION/hbase-$HBASE_VERSION-bin.tar.gz.sha512 
-      curl --output hbase-$HBASE_VERSION-bin.tar.gz --limit-rate 5M $HBASE_URL
-      curl --output hbase-$HBASE_VERSION-bin.tar.gz.sha512 --limit-rate 2M $HBASE_URL_SHA512
-      
-      checksum=$(cat hbase-2.6.1-bin.tar.gz.sha512 | tr "\n" " " | awk -F':' '{print $2}' | tr -d ' ' | tr '[:upper:]' '[:lower:]')
-      calculated_checksum=$(sha512sum hbase-2.6.1-bin.tar.gz | awk '{print $1}')
-      if [ "$checksum" != "$calculated_checksum" ]
-      then
-        echo "sha512sum of hbase couldn't be verified ($checksum vs $calculated_checksum; aborting"
-        exit 1
-      fi
-      
-      tar -xf hbase-$HBASE_VERSION-bin.tar.gz
-   fi
-
-   cd hbase-$HBASE_VERSION
-   bin/start-hbase.sh
+	echo "Starting HBase openeuler/hbase:2.6.3-oe2403sp1"
    
-   if [ ! -f hbase-create.hbase ]
-   then
-      wget https://raw.githubusercontent.com/pinpoint-apm/pinpoint/refs/heads/master/hbase/scripts/hbase-create.hbase
-   fi
-   
-   bin/hbase shell hbase-create.hbase &> ${BASE_DIR}/logs/hbase-create.log
-   
-   cd $BASE_DIR
+	if [ ! -f hbase-create.hbase ]
+	then
+		wget https://raw.githubusercontent.com/pinpoint-apm/pinpoint/refs/heads/master/hbase/scripts/hbase-create.hbase
+	fi
+	
+	echo "Warte auf HBase-Master ..."
+	docker logs -f hbase 2>&1 | grep -m1 "Master has completed initialization"
+	echo "HBase-Master ist bereit."
+     
+	echo "Initialising hbase tables - log goes to hbase-creation-log.txt"
+	docker cp hbase-create.hbase hbase:/tmp/hbase-create.hbase
+	docker exec hbase hbase shell /tmp/hbase-create.hbase &> hbase-creation-log.txt
+	echo
+	echo
 }
 
 function stopHBase(){
-   echo "Stopping HBase $HBASE_VERSION"
-   cd hbase-$HBASE_VERSION
-   bin/stop-hbase.sh
-   
-   rm tmp -r
-   rm logs/*
-   rm /tmp/hbase-* -r
-   
-   cd $BASE_DIR
+	echo "Stopping HBase $HBASE_VERSION"
+	docker rm -f hbase
 }
 
-
-export KAFKA_VERSION=2.13-3.9.0
+export KAFKA_VERSION=4.1.0
+export SCALA_VERSION=2.13
 function startKafka() {
-   if [ ! -d kafka_$KAFKA_VERSION ]
-   then
-        KAFKA_URL=https://dlcdn.apache.org/kafka/3.9.0/kafka_$KAFKA_VERSION.tgz
-   	wget $KAFKA_URL
-   	
-   	tar -xf kafka_$KAFKA_VERSION.tgz
-   fi
-   cd kafka_$KAFKA_VERSION
-
-   KAFKA_CLUSTER_ID="$(bin/kafka-storage.sh random-uuid)"
-   bin/kafka-storage.sh format --standalone -t $KAFKA_CLUSTER_ID -c config/kraft/reconfig-server.properties
-   bin/kafka-server-start.sh config/kraft/reconfig-server.properties &> ${BASE_DIR}/logs/kafka.log &
-   
-   echo "Waiting for Kafka start..."
-   sleep 3
-   bin/kafka-topics.sh --create --topic inspector-stat-agent-00 --bootstrap-server localhost:9092 --replication-factor 1 --partitions 1
-   bin/kafka-topics.sh --create --topic inspector-stat-app --bootstrap-server localhost:9092 --replication-factor 1 --partitions 1
-   
-   cd $BASE_DIR
+	echo "Starting Kafka"  
+	docker exec kafka kafka-topics \
+		--create \
+		--if-not-exists \
+		--topic inspector-stat-agent-00 \
+		--bootstrap-server localhost:9092 \
+		--replication-factor 1 \
+		--partitions 1
+	docker exec kafka kafka-topics \
+		--create \
+		--if-not-exists \
+		--topic inspector-stat-agent-01 \
+		--bootstrap-server localhost:9092 \
+		--replication-factor 1 \
+		--partitions 1
+ 
+	docker exec kafka kafka-topics \
+		--create \
+		--if-not-exists \
+		--topic inspector-stat-app \
+		--bootstrap-server localhost:9092 \
+		--replication-factor 1 \
+		--partitions 1
+		
+	echo
+	echo
 }
 
 function stopKafka {
-   cd kafka_$KAFKA_VERSION
-   bin/kafka-server-stop.sh
-   
-   rm logs/*
-   rm /tmp/kraft-combined-logs/ -rf
-   
-   cd $BASE_DIR
+  docker rm -f kafka
 }
 
 function waitForStartup {
@@ -153,6 +167,8 @@ function startPinot() {
       #curl --output apache-pinot-$PINOT_VERSION-bin.tar.gz $
          
       tar -zxf apache-pinot-$PINOT_VERSION-bin.tar.gz
+   else
+      rm -rf apache-pinot-$PINOT_VERSION-bin/pinot-temp-dir
    fi
 	
    cd apache-pinot-$PINOT_VERSION-bin
@@ -175,20 +191,36 @@ function stopPinot {
    
    rm /tmp/.pinotAdmin*
    rm /tmp/pinot-* -r
+   rm -rf /tmp/Pinot*
    rm /tmp/PinotMinion -r
    rm apache-pinot-$PINOT_VERSION-bin/pinot-temp-dir -r
 }
 
 function startCollectorAndWeb() {
    cd pinpoint
-   PINPOINT_VERSION=3.0.1
 
    if [ ! -f pinpoint-collector-starter-${PINPOINT_VERSION}-exec.jar ]
    then
       wget https://repo1.maven.org/maven2/com/navercorp/pinpoint/pinpoint-collector-starter/${PINPOINT_VERSION}/pinpoint-collector-starter-${PINPOINT_VERSION}-exec.jar
    fi
    
-   java -Dpinpoint.zookeeper.address=localhost -Dpinpoint.modules.realtime.enabled=false -jar pinpoint-collector-starter-${PINPOINT_VERSION}-exec.jar &> ${BASE_DIR}/logs/collector.log &
+   RATE_LIMIT=100000
+   REFILL=20000
+   
+   java --add-opens=java.base/java.nio=ALL-UNNAMED -Dpinpoint.zookeeper.address=localhost \
+   	-Dcollector.receiver.grpc.stat.stream.flow-control.rate-limit.capacity=$RATE_LIMIT \
+   	-Dcollector.receiver.grpc.stat.stream.flow-control.rate-limit.refill-greedy=$REFILL \
+   	-Dcollector.receiver.grpc.span.stream.flow-control.rate-limit.capacity=$RATE_LIMIT \
+   	-Dcollector.receiver.grpc.span.stream.flow-control.rate-limit.refill-greedy=$REFILL \
+   	-Dcollector.receiver.grpc.agent.stream.flow-control.rate-limit.capacity=$RATE_LIMIT \
+   	-Dcollector.receiver.grpc.agent.stream.flow-control.rate-limit.refill-greedy=$REFILL \
+   	-Dmanagement.otlp.metrics.export.enabled=false \
+   	-Dcollector.kafka.enabled=false \
+   	-Dpinpoint.modules.realtime.enabled=false \
+   	-Dpinpoint.modules.collector.inspector.enabled=false \
+   	-Dpinpoint.collector.type=BASIC \
+   	-Dpinpoint.metric.kafka.bootstrap.servers=localhost:9092 \
+   	-jar pinpoint-collector-starter-${PINPOINT_VERSION}-exec.jar &> ${BASE_DIR}/logs/collector.log &
    
    waitForStartup ${BASE_DIR}/logs/collector.log "Started PinpointCollectorStarter in"
    
@@ -198,7 +230,7 @@ function startCollectorAndWeb() {
       wget https://repo1.maven.org/maven2/com/navercorp/pinpoint/pinpoint-web-starter/${PINPOINT_VERSION}/pinpoint-web-starter-${PINPOINT_VERSION}-exec.jar
    fi
    
-   java -Dpinpoint.zookeeper.address=localhost -Dpinpoint.modules.realtime.enabled=false -jar pinpoint-web-starter-${PINPOINT_VERSION}-exec.jar &> ${BASE_DIR}/logs/web-starter.log &
+   java --add-opens=java.base/java.nio=ALL-UNNAMED --add-opens=java.base/sun.nio.ch=ALL-UNNAMED -Dpinpoint.zookeeper.address=localhost -Dpinpoint.modules.realtime.enabled=false -jar pinpoint-web-starter-${PINPOINT_VERSION}-exec.jar &> ${BASE_DIR}/logs/web-starter.log &
     waitForStartup ${BASE_DIR}/logs/web-starter.log "Started PinpointWebStarter in"
    
    
@@ -247,34 +279,46 @@ function runNoInstrumentation {
 }
 
 function startPinpointServers {
-   mkdir -p logs
+	mkdir -p logs
 
-   startHBase
-   startKafka
-   startPinot
+	# Containers should be started first and afterwards filled with data
+	startHBaseAndKafkaContainers
+	startHBase
+	startKafka
+	
+	startPinot
+	
+	docker run -d \
+		--name pinpoint-redis \
+		-p 6379:6379 \
+		redis:7-alpine
    
-   startCollectorAndWeb
+	startCollectorAndWeb
+	
+	
 }
 
 function stopPinpointServers {
-   stopCollectorAndWeb
-   stopKafka
-   stopPinot
-   stopHBase
+	stopCollectorAndWeb
+	stopKafka
+	stopPinot
+	stopHBase
    
-   # No clue which tool creates these, but they are created...
-   rm /tmp/tomcat* -r
+	docker rm -f pinpoint-redis
+   
+	# No clue which tool creates these, but they are created...
+	rm /tmp/tomcat* -r
 }
 
 function setPinpointConfig {
-   sed -i 's/DEBUG/INFO/g' pinpoint/pinpoint-agent-3.0.1/log4j2-agent.xml
-   sed -i '/profiler.entrypoint/a profiler.transport.grpc.span.sender.executor.queue.size=100000' pinpoint/pinpoint-agent-3.0.1/profiles/release/pinpoint.config
-   sed -i '/profiler.entrypoint/a profiler.pinpoint.base-package=moobench.application' pinpoint/pinpoint-agent-3.0.1/profiles/release/pinpoint.config
-   sed -i 's|^profiler.entrypoint=.*|profiler.entrypoint=moobench.application.MonitoredClassSimple.monitoredMethod|' pinpoint/pinpoint-agent-3.0.1/profiles/release/pinpoint.config
-   sed -i 's|^profiler.include=.*|profiler.include=moobench.application*|' pinpoint/pinpoint-agent-3.0.1/profiles/release/pinpoint.config
-   sed -i 's|^profiler.sampling.counting.sampling-rate=.*|profiler.sampling.counting.sampling-rate=1|' pinpoint/pinpoint-agent-3.0.1/profiles/release/pinpoint.config
+   sed -i 's/DEBUG/INFO/g' pinpoint/pinpoint-agent-${PINPOINT_VERSION}/log4j2-agent.xml
+   sed -i '/profiler.entrypoint/a profiler.transport.grpc.span.sender.executor.queue.size=100000' pinpoint/pinpoint-agent-${PINPOINT_VERSION}/profiles/release/pinpoint.config
+   sed -i '/profiler.entrypoint/a profiler.pinpoint.base-package=moobench.application' pinpoint/pinpoint-agent-${PINPOINT_VERSION}/profiles/release/pinpoint.config
+   sed -i 's|^profiler.entrypoint=.*|profiler.entrypoint=moobench.application.MonitoredClassSimple.monitoredMethod|' pinpoint/pinpoint-agent-${PINPOINT_VERSION}/profiles/release/pinpoint.config
+   sed -i 's|^profiler.include=.*|profiler.include=moobench.application*|' pinpoint/pinpoint-agent-${PINPOINT_VERSION}/profiles/release/pinpoint.config
+   sed -i 's|^profiler.sampling.counting.sampling-rate=.*|profiler.sampling.counting.sampling-rate=1|' pinpoint/pinpoint-agent-${PINPOINT_VERSION}/profiles/release/pinpoint.config
    
-   sed -i 's|^profiler.statdatasender.write.queue.size=.*|profiler.statdatasender.write.queue.size=51200|' pinpoint/pinpoint-agent-3.0.1/profiles/release/pinpoint.config
+   sed -i 's|^profiler.statdatasender.write.queue.size=.*|profiler.statdatasender.write.queue.size=51200|' pinpoint/pinpoint-agent-${PINPOINT_VERSION}/profiles/release/pinpoint.config
    
 }
 
